# portsplit

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  TODO  configure.ac  portsplit.c
examples/: Makefile.am  portsplit.conf
include/: Makefile.am  child.h  config_parse.h  log.h  main.h  sigs.h
man/: Makefile.am  mdtoman.sh  portsplit.1  portsplit.md
src/: Makefile  Makefile.am  child.c  config_parse.c  log.c  main.c  sigs.c
