bin_PROGRAMS = portsplit

portsplit_SOURCES = \
		child.c \
		config_parse.c \
		log.c \
		main.c \
		sigs.c

AM_CFLAGS = \
	-pedantic \
	-std=gnu11 \
	-O2 \
	-Wchar-subscripts \
	-Wcomment \
	-Wformat=2 \
	-Wimplicit-int \
	-Werror-implicit-function-declaration \
	-Wmain \
	-Wparentheses \
	-Wsequence-point \
	-Wreturn-type \
	-Wswitch \
	-Wtrigraphs \
	-Wunused \
	-Wuninitialized \
	-Wunknown-pragmas \
	-Wfloat-equal \
	-Wundef \
	-Wshadow \
	-Wpointer-arith \
	-Wbad-function-cast \
	-Wwrite-strings \
	-Wconversion \
	-Wsign-compare \
	-Waggregate-return \
	-Wstrict-prototypes \
	-Wmissing-prototypes \
	-Wmissing-declarations \
	-Wmissing-noreturn \
	-Wformat \
	-Wmissing-format-attribute \
	-Wpacked \
	-Wredundant-decls \
	-Wnested-externs \
	-Winline \
	-Wlong-long \
	-Wunreachable-code \
	-Wno-missing-braces \
	-Wno-missing-field-initializers
